# typiod-wayland

./: CHANGELOG.md  README.md  meson.build
.github/workflows/: ci.yml
data/: core.toml.example  platform.toml.example  typio.service.in  wayland.toml.example
docs/: index.md
docs/adr/: 0001-record-architecture-decisions.md  0002-wayland-input-method-v2.md  0003-session-controller-reduce-diff.md  0008-ipc-protocol-resource-namespaces-uds-only.md  0009-long-term-performance-optimizations.md  0014-canonical-panel-vocabulary.md  0016-per-glyph-font-fallback.md  0017-positioned-ui-arbitration.md  0018-focus-transition-classification.md  0019-atlas-hash-compaction.md  0020-atlas-reclamation-and-glyph-layer-modularization.md  0021-systemd-user-service-daemon-lifecycle.md  0022-panel-retry-result-owned-by-update.md  0025-engine-discovery-search-path.md  0026-modality-explicit-engine-control-surface.md  0031-language-first-switching-surface.md  0032-tray-icon-composition.md  index.md
docs/dev/: code-style.md  documentation-style-guide.md  maintenance.md  panel-appearance.md  rendering-organization.md  setup.md  testing.md
docs/explanation/: control-surfaces.md  event-loop-scheduling.md  focus-controller.md  frontend-graphics.md  input-method-session.md  panel-architecture.md  panel-ontology.md  project-scope.md  session-controller.md  timing-model.md  vulkan-flux-rendering.md  wayland-input-method.md
docs/how-to/: package-for-distribution.md  troubleshooting.md
docs/reference/: cli.md  configuration.md  engine-discovery.md  glossary.md  ipc-protocol.md  memory-budget.md
src/: app.c  app.h  cli.c  cli.h  engine_loader.c  main.c  meson.build  plugin_loader.c  plugin_loader.h
src/audio/: pw_capture.c  pw_capture.h
src/bridge/: candidate_guard.c  candidate_guard.h
src/engine/: boundary.h  focus_controller.c  focus_controller.h  identity.c  lifecycle.c  lifecycle.h  lifecycle_policy.c
src/frontend/: event_loop.c  frontend.c  frontend_bind.c  frontend_runtime.c  indicator.c  input_method.c  internal.h  keyboard.c  panel_coordinator.c  runtime_config.c  watchdog.c
src/input/: arbiter.c  bridge.c  router.c  xkb.c  xkb.h
src/input/wayland/: bridge.c  router.c
src/ipc/: ipc_bus.c  tip_protocol.h
src/notify/: notifications.c
src/state/: controller.c  controller.h  service.c
src/tray/: bus.c  icon_badge.c  icon_badge.h  sni.c  tray.h  tray_internal.h
src/ui/: backend.h  state.c  state.h
src/ui/panel/: content.h  device.c  device.h  fallback_cache.c  fallback_cache.h  font_cache.c  font_cache.h  font_resolve.c  font_resolve.h  glyph_atlas.c  glyph_atlas.h  glyph_pack.c  glyph_pack.h  glyph_upload.c  glyph_upload.h  layout.c  layout.h  paint.c  paint.h  panel.c  panel.h  stub.c  surface.c  surface.h  text_shaper.c  text_shaper.h  theme.c  theme.h
src/wayland/: event_loop.c  focus_effects.c  frontend.c  frontend_runtime.c  indicator.c  input_method.c  internal.h  runtime_config.c  shortcut.c  shortcut.h  trace.c
src/wayland/keyboard/: arbiter.c  bridge.c  keyboard.c  repeat.c
subprojects/: flux.wrap  libtypio.wrap
tests/: meson.build  test_glyph_pack.c  test_lifecycle.c  test_text_ui_state.c
tests/app/: test_recent_log_dump.c  test_server_app.c
tests/engine/: test_boundary_bridge.c  test_focus_controller.c  test_identity.c  test_reconnect_backoff.c  test_resume_model.c  test_session_controller.c  test_startup_guard.c  test_startup_health.c  test_state_machine_properties.c
tests/frontend/: test_candidate_guard.c  test_frontend_aux.c  test_panel_scheduler.c
tests/input/policy/: test_key_tracking.c  test_modifier_policy.c  test_repeat_guard.c  test_shortcut_chord.c
tests/input/wayland/: test_key_arbiter.c  test_key_route.c  test_vk_bridge.c
tests/ipc/: test_uds_ipc.c
tests/tray/: test_icon_badge.c
tests/ui/: test_inline_ui.c  test_text_ui_state.c
tests/wayland/keyboard/: test_key_arbiter.c  test_vk_bridge.c
